feat: complete workforce sharing, role-based store access, and dynamic request workflows